# app/src/config/swagger/swagger-output.json
@@ -148,6 +148,32 @@
         }
       }
     },
+    "/api/logout": {
+      "get": {
+        "tags": [
+          "User"
+        ],
+        "description": "로그아웃",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "로그아웃 성공",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "로그아웃 되었습니다."
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/posts": {
       "post": {
         "tags": [
